css/style.css
/* ... */
.title-project {
	margin-top: 0rem;
	padding-top: 10rem;
}

@media (max-width: 1199px){
	/* HEADER */
	.main-link {
		width: auto;
		height: auto;
	}

	.main-link:hover {
		background: none;
		border-bottom:  0.125rem solid #380DE4;
	}

	.menu ul {
		display: flex;
		flex-direction: column;
	}

	.menu ul li:not(:first-child){
		margin-left: 0rem;
		margin-top: 2rem;
	}

/* MY STORY */
	.pic {
		width: 40%;
	}
	.story {
		width: 60%;
	}
}

@media (max-width: 991px) {
	/* FONTS */
	p, h3, .story, .about p {
		font-size: 0.875rem;
		line-height: 1.4rem;
	}

/* HEADER */
  .container {
		max-width: 32rem;
	}

  .container picture {
	  max-width: 35px;
  }

	.main-link {
		width: auto;
		height: auto;
	}

	.main-link:hover {
		background: none;
		border-bottom:  0.125rem solid #380DE4;
	}

	.menu ul li:not(:first-child){
		margin-left: 8.75rem;
		margin-top: 2rem;
	}

	.menu ul {
		display: flex;
		flex-direction: column;
	}

	.menu ul li:not(:first-child){
		margin-left: 0rem;
	}

	.title {
		padding-top: 5rem;
		font-size: 3rem;
		line-height: 3.8rem;
	}


/* MY STORY */
	.pic {
		width: 50%;
	}
	.story {
		width: 50%;
	}

/* PAGES PROJECT1-PROJECT4 */
	.project-text {
		width: 60%;
	}

	.project-link {
    margin-left: 18.3rem;
  }
}

@media (max-width:767px) {
	/* FONTS */
	h1 {
	 font-size: 2rem;
	 line-height: 3.2rem;
	 padding: 4rem 0rem 1rem 0rem;
	}

	#home h2 {
	 font-size: 1.5rem;
	 line-height: 2.4rem;
	}

	#my_works h2, #about_me h2, #my_story h2, #contact_me h2 {
	 font-size: 2rem;
	 line-height: 2.12rem;
	 letter-spacing: 0.16rem;
	 padding: 5rem 0rem 1rem 0rem;
	}

	p, h3, .story, .about p {
		font-size: 1rem;
		line-height: 1.6rem;
	}
/* HEADER */
	.container {
		height: 4rem;
		max-width: 32rem;
	}

	.container picture {
	  max-width: 35px;
  }

	.main-link {
		width: auto;
		height: auto;
	}

	.main-link:hover {
		background: none;
		border-bottom:  0.125rem solid #380DE4;
	}

	.menu ul {
		display: flex;
		flex-direction: column;
	}

	.menu ul li:not(:first-child){
		margin-left: 0rem;
		margin-top: 2rem;
	}

	.title {
		padding-top: 5rem;
		font-size: 2rem;
		line-height: 3.2rem;
	}

	.mein {
		display: none;
	}

	.mein-1 {
		display: inline-block;
		height: auto;
		width: 100%;
	}

	/*  MY WORKS  */

	.image-block {
		height: 60%;
	}

	.content-block {
		height: 40%;
	}

	/*  ABOUT ME  */

	.about {
		margin: 0% 4%;
	}

	.about p {
		margin-top: 4%;
	}

/*MY STORY */
	.pic {
		width: 50%;
	}
	.story {
		width: 50%;
	}

	form {
		width: 90%;
	}

	.group, .group-email, .group-name {
		width: 90%;
}

/* PAGES PROJECT1-PROJECT4 */
  #container-project {
	  margin-top: 0rem;
  }
  .project-link {
    margin-left: 18.3rem;
  }

	.project-text {
		width: 70%;
	}

	.project-wrap {
		width: 100%;
	}
}

@media (max-width: 575px) {
	/* FONTS */
	h1 {
	 font-size: 2rem;
	 line-height: 3.2rem;
	 padding: 4rem 0rem 1rem 0rem;
	}

	#home h2 {
	 font-size: 1.5rem;
	 line-height: 2.4rem;
	}

	#my_works h2, #about_me h2, #my_story h2, #contact_me h2 {
	 font-size: 2rem;
	 line-height: 2.12rem;
	 letter-spacing: 0.16rem;
	 padding: 5rem 0rem 1rem 0rem;
	}

	 p, h3, .story, .about p {
		 font-size: 1rem;
		 line-height: 1.6rem;
	 }

	 h3 {
		 text-align: center;
	 }

	 nav ul li a {
		 font-size: 0.8125rem;
		 line-height: 1.3rem;
	 }

/* HEADER */
  .container {
		height: 3rem;
		max-width: 18rem;
	}

  .container picture {
	  max-width: 35px;
  }

  .main-link {
		width: auto;
		height: auto;
	}

	.main-link {
		margin-left: 0.75rem;
	}

	.main-link:hover {
		background: none;
		border-bottom:  0.1rem solid #380DE4;
	}

	header {
		 position: relative;
	 }

/* HOME */
	 .title {
		 padding-top: 1rem;
		 font-size: 2rem;
		 line-height: 3.2rem;
	 }

	.menu ul {
		display: flex;
		flex-direction: column;
	}

	.menu ul li:not(:first-child){
		margin-left: 0rem;
		margin-top: 2rem;
	}

	.main_p {
		padding: 0rem 0.5rem;
	}

/* MY WORKS*/
	.my-works {
		margin: 0%;
	}

	.works, .line_f, form, .about {
		width: 90%;
	}

	.works:nth-child(odd) {
	  margin: 0% auto 5% auto;
	}

	.works:nth-child(even) {
	  margin: 0% auto 5% auto;
	}

	.works:not(:first-child){
		margin-top: 5%;
	}

	.works:last-child {
		margin-bottom: 0%;
	}

/* MY STORY */
	.about {
	  margin: 0% 4%;
		padding: 3rem 2rem 0rem 2rem;
	}

	.about p {
		margin-top: 4%;
	}

	.mein {
		display: none;
	}

	.mein-1 {
		display: inline-block;
		height: auto;
		width: 100%;
	}

	.line_f:not(:first-child), .line_f:not(:nth-child(2)) {
		margin-top: 0rem;
	}

	.line_f {
		flex-direction: column;
	  margin: 0rem auto 2rem auto;
	}

	.line_f:nth-child(even) {
		flex-direction: column-reverse;
	}

	.pic, .story {
		width: 90%;
	  margin: 0rem auto;
	}

	.pic picture img:nth-child(odd)  {
	  margin: 0rem auto;
	}

/* CONTACT ME */
	form {
		width: 90%;
	}

	.group, .group-email, .group-name {
		width: 90%;
	}

	input:not([type="submit"]) {
	  padding-top: 0.8rem;
	}

	label {
		font-size: 1.25rem;
		padding-top: 1.5rem;
	}

	button {
		margin: 3rem 0 3rem 0;
	}

	.menu-social ul {
		padding: 1rem 0rem 2rem 0rem;
	}

	.menu-social ul li:not(:first-child){
		margin-left: 2rem;
	}

	.icon {
		width: 2.75rem;
		height: 2.75rem;
	}

/* FOOTER */
  footer {
		height: 3rem;
	}

	.footer-panel {
		height: 3rem;
		padding-top: 0.25rem;
	}

/* ICON FIXED */
	.icon {
		width: 2.5rem;
		height: 2.5rem;
		fill: #F4550A;
	}

	.fixed {
		display: inline-block;
	  bottom: 2rem;
	  right: 1rem;
	}

	.fixedicon {
		width: 3.125rem;
		height: 3.125rem;
		fill: #59585F;
	}

/* PAGES PROJECT1-PROJECT4 */
   #container-project {
    margin-top: 0rem;
   }

	 .project-link {
	 	 margin-left: 8.3rem;
	 }

	 .project-link:hover {
	 	border-bottom: 0.1rem solid #380DE4;
	 }

	 .project-wrap {
		 width: 100%;
	 }

	 .title-project {
	 	margin-top: 0rem;
	 	padding-top: 3rem;
	 }

	 .project-text {
 		width: 80%;
 	}
}

